ATLAS-5330: Atlas React UI: Text overflow issues in Global Search, Recent Activity, Search Filters, and Popovers for long classification names

--- a/dashboard/src/index.scss
+++ b/dashboard/src/index.scss
@@ -329,6 +329,10 @@ textarea::placeholder {
   font-weight: normal !important;
 }
 
+.fw-bold {
+  font-weight: 700 !important;
+}
+
 .text-left {
   text-align: left !important;
 }
